# document-intelligence-code-samples

Python(v4.0)/: .env.template  .gitignore  README.md  pyproject.toml  setup.sh
Python(v4.0)/examples/: test_layout_analysis.py  visualize_analysis.py
Python(v4.0)/examples/sample_documents/: README.md
Python(v4.0)/my_project/: __init__.py
Python(v4.0)/my_project/models/: layout_analyzer.py
Python(v4.0)/my_project/utils/: azure_client.py
Python(v4.0)/tests/: test_azure_client.py  test_layout_analyzer.py  test_layout_visualizer.py
